[package]
name = "certchain"
version = "0.1.0"
authors = ["Matt Quinn <matt@mattjquinn.com>"]

[dependencies]
hyper = "0.6.1"
rust-crypto = "*"
getopts = "0.2"
log = "0.3.1"
log4rs = "0.3.3"
toml = "0.1.23"
byteorder = "0.3.13"
rand = "0.3.9"
rust-base58 = "0.0.4"
time = "0.1.32"
rmp-serialize = "0.7.0"
rustc-serialize = "0.3.16"
compress = "0.1.1"
secp256k1 = "0.3.2"
